# netintent-ops

./: .ansible-lint  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
ansible/: ansible.cfg
ansible/collections/: requirements.yml
ansible/group_vars/: all.yml  lab.yml
ansible/host_vars/: leaf1.yml  leaf2.yml
ansible/inventories/lab/: hosts.yml
ansible/inventories/prod/: hosts.yml
ansible/inventories/staging/: hosts.yml
ansible/playbooks/: apply.yml  plan.yml  validate.yml
ansible/roles/base/defaults/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/base/templates/: banner.j2
ansible/templates/: intent.md.j2
api/: __init__.py  app.py  models.py  runner.py  storage.py
docs/: architecture.md  intent_examples.md  runbooks.md  sample_plan_request.json
infra/: Dockerfile.api  Dockerfile.ee  Dockerfile.worker  postgres-init.sql
infra/ansible-builder/: execution-environment.yml  requirements.txt  system.txt
molecule/base/: converge.yml  create.yml  destroy.yml  molecule.yml
tests/molecule/base/: verify.yml
worker/: worker.py
